# tmmc-lnpy

./: .buildinfo  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc.toml  CHANGELOG.md  CONTRIBUTING.md  api_autosummary.html  authors.html  changelog.html  conftest.py  contributing.html  copy_docs_to_here.sh  genindex.html  history.html  index.html  installation.html  justfile  license.html  navigation.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  readme.html  ruff.toml  search.html  searchindex.js
.github/workflows/: ci.yml  cruft-update.yml
_modules/: index.html
_modules/lnpy/: ensembles.html  lnpidata.html  lnpienergy.html  lnpiseries.html  segment.html  stability.html  utils.html
_sources/: navigation.rst
_sources/examples/usage/: Basic_usage.ipynb
_sources/reference/: api-modules.rst
_static/: documentation_options.js
docs/: conf.py
docs/reference/: api-other.rst
examples/: index.html
examples/usage/: Basic_usage.html  Basic_usage.ipynb
notebooks/: Basic_usage.html
reference/: api-legacy.html  api-modules.html  api-other.html  api-public.html  index.html
requirements/: py310-test-extras.yaml  py310-test.yaml  py311-test-extras.yaml  py311-test.yaml  py312-test-extras.yaml  py312-test.yaml  py313-dev.yaml  py313-test-extras.yaml  py313-test.yaml  py314-test-extras.yaml  py314-test.yaml  uvx-tools.txt
requirements/lock/: pre-commit-additional-dependencies.txt  py310-test.txt  py310-typing.txt  py311-dev-base.txt  py311-dev-complete.txt  py311-dev.txt  py311-docs.txt  py311-pipxrun-tools.txt  py311-test-notebook.txt  py311-test.txt  py311-typing.txt  py312-test.txt  py312-typing.txt  py38-test.txt  py38-typing.txt  py39-test.txt  py39-typing.txt  uvx-tools.txt
src/lnPi/: __init__.py  collectionlnpiutils.py  maskedlnpi_legacy.py  stability.py
src/lnpy/: __init__.py  compile.py  ensembles.py  examples.py  lnpicollectionutils.py  lnpidata.py  lnpienergy.py  lnpiseries.py  molfrac.py  options.py  segment.py  stability.py
src/lnpy/_lib/: combine.py  combine_parallel.py  decorators.py
src/lnpy/combine/: combine.py  grouper.py  overlap.py
src/lnpy/core/: _attrs_utils.py  array_utils.py  compat.py  docstrings.py  joblib.py  mask.py  progress.py  typing.py  typing_compat.py  typing_kwargs.py  utils.py  validate.py  xr_utils.py
tests/: conftest.py  test_combine.py  test_hs_mix.py  test_lj_mix_0.py  test_lnPi.py  test_segmenter.py  test_single_comp_sub.py  test_single_comp_super.py  test_smoke.py  test_typing.py  test_water_cluster.py
tools/: auto_parallel_files.py  dataclass_parser.py  notebook.just  noxtools.py  shared.just  sync_pyproject_min_versions.py
