[build-system]
build-backend = "uv_build"
requires = [
    "uv-build>=0.8.22,<0.9.0",
]

[project]
name = "tmmc-lnpy"
version = "0.8.1.dev0"
description = "Analysis of lnPi results from TMMC simulation"
readme = "README.md"
keywords = [
    "tmmc-lnpy",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "bottleneck",
    "importlib-resources; python_version<'3.10'",
    "joblib",
    "lazy-loader",
    "module-utilities>=0.9.0",
    "numba",
    "numpy",
    "pooch",
    "scikit-image>=0.21",
    "scipy",
    "tqdm",
    "typing-extensions>=4.10.0; python_version<'3.13'",
    "xarray",
]
optional-dependencies.all = [ "tmmc-lnpy[resample,viz]" ]
optional-dependencies.resample = [
    "cmomy>=1.0.1",
    "dask[diagnostics]",
    "netcdf4",
]
optional-dependencies.viz = [
    "ipywidgets",
    "matplotlib",
]
urls.Documentation = "https://pages.nist.gov/tmmc-lnpy/"
urls.Homepage = "https://github.com/usnistgov/tmmc-lnpy"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    { include-group = "notebook" },
    { include-group = "nox" },
    { include-group = "optional" },
    { include-group = "pytest-accept" },
    { include-group = "test" },
    { include-group = "test-notebook" },
    { include-group = "typecheck" },
]
test = [
    "pytest-cov",
    "pytest-env",
    "pytest-sugar",
    "pytest-xdist",
    { include-group = "pytest" },
]
docs = [
    "autodocsumm",
    "myst-nb",
    "pyenchant",
    "sphinx>=5.3.0",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinxcontrib-spelling",
    { include-group = "viz" },
]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
# other packages/tools
ipython = [ "ipython" ]
mypy = [ "mypy>=1.15.0", "orjson" ]
notebook = [ "ipykernel", "nbclient" ]
nox = [ "nox>=2025.5.1" ]
# other environments
optional = [ "tmmc-lnpy[all]" ]
pylint = [ "pylint" ]
pytest = [ "pytest!=8.4" ]
pytest-accept = [ "pytest-accept" ]
test-extras = [
    { include-group = "test" },
]
test-notebook = [
    "nbval",
    { include-group = "test" },
    { include-group = "viz" },
]
typecheck = [
    "pandas-stubs",
    "scipy-stubs; python_version>='3.10'",
    "types-tqdm",
    { include-group = "pylint" },
    { include-group = "pytest" },
]
viz = [ "tmmc-lnpy[viz]" ]

# * uv -------------------------------------------------------------------------

[tool.uv]
required-version = ">=0.7.15"
default-groups = [ "dev" ]
dependency-groups.dev.requires-python = ">=3.13"
dependency-groups.docs-live.requires-python = ">=3.13"
dependency-groups.docs-spelling.requires-python = ">=3.13"
dependency-groups.docs.requires-python = ">=3.13"
# other tools
dependency-groups.ipython.requires-python = ">=3.13"
dependency-groups.mypy.requires-python = ">=3.13"
dependency-groups.notebook.requires-python = ">=3.13"
dependency-groups.nox.requires-python = ">=3.13"
fork-strategy = "requires-python"
managed = true
build-backend.module-name = [ "lnpy", "lnPi" ]
build-backend.source-include = [ "tests/**" ]
pip.annotation-style = "line"
pip.generate-hashes = true

[tool.nbqa]
# * Checks ---------------------------------------------------------------------

exclude.codespell = "^examples/archived"

[tool.repo-review]
ignore = [
    "GH",     # enable for actions
    "PC140",  # do this externally
    "PC170",  # pygrep
    "PC901",  # ci message
    "RTD",
    "NOX103", # I prefer using "nox.options.sessions"
]

[tool.check-wheel-contents]
toplevel = [
    "lnpy",
    "lnPi",
]
src_dir = [
    "src",
]

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.typos]
default.extend-ignore-identifiers-re = [ "NDArray.*" ]
default.extend-identifiers.fileprefix_inh = "fileprefix_inh"
default.extend-words.datas = "datas"
default.extend-words.STABL = "STABL"

[tool.pytest]
# * Testing --------------------------------------------------------------------

ini_options.addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--doctest-modules",
    "--doctest-glob=*.md",
    "--cov-config=pyproject.toml",
    "--pyargs",
    "-n",
    "4",
]
ini_options.testpaths = [
    # "README.md",  # py38 issues.
    "lnPi",
    "lnpy",
    "tests",
]
ini_options.minversion = "8"
ini_options.log_cli_level = "INFO"
ini_options.xfail_strict = true
ini_options.filterwarnings = [
    "error",
    "ignore: lnPi is deprecated.  Please transition to using lnpy instead:DeprecationWarning",
    "ignore: FNV hashing is not implemented in Numba:UserWarning",
    "ignore: This process:DeprecationWarning",
    "ignore: Module lnpy was never imported:coverage.exceptions.CoverageWarning",
    "ignore: No data was collected:coverage.exceptions.CoverageWarning",
    "ignore: importing 'Const' from 'astroid':DeprecationWarning",
]

[tool.coverage]
run.branch = true
paths.source = [
    "src/",
    ".nox/**/site-packages/",
]
report.exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]
report.include = [
    "src/*",
]
report.omit = [
    "*/core/typing.py",
    "*/vendored/*",
]
report.show_missing = true

# * typecheck ---------------------------------------------------------------------

[tool.mypy]
files = [
    "src",
    "tests",
]
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
exclude = [
    ".eggs",
    ".tox",
    ".nox",
    ".venv",
    ".numba_cache",
    "docs",
]
check_untyped_defs = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
untyped_calls_exclude = [
    "skimage",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "bottleneck.*",
    "IPython.*",
    "joblib.*",
    "lnPi.*",
    "matplotlib.*",
    "numba.*",
    "pooch.*",
    "scipy.ndimage.*",
    "scipy.spatial.*",
    "scipy.optimize.*",
    "scipy.sparse.*",
    "skimage.*",
]

[[tool.mypy.overrides]]
strict = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
module = [
    "tests.*",
    "lnPi.maskedlnpi_legacy.*",
]

[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "**/__pycache__",
    ".tox/**",
    ".nox/**",
    ".venv/**",
    "**/.mypy_cache",
    "**/.numba_cache",
]
typeCheckingMode = "standard"
strict = [
    # "src",
    # "tests",
    "noxfile.py",
    "tools/*.py",
    # "src/lnpy/*.py",
    # "src/lnpy/core/*.py",
]
reportDuplicateImport = true
reportInvalidStubStatement = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUntypedNamedTuple = true
reportUnusedImport = true
# Extra flags
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"

[tool.pytype]
inputs = [
    "src",
    "tests",
]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user-config = "config/userconfig.toml"
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"
dependencies.pytest-accept = { pip = true }
dependencies.matplotlib = { skip = true, packages = "matplotlib-base" }
dependencies.lazy-loader = { skip = true, packages = "lazy_loader" }
envs.dev.groups = [ "dev" ]
envs.dev.python = "default"
envs.test.groups = [ "test" ]
envs.test.python = "all"
envs.test-extras.groups = [ "test-extras" ]
envs.test-extras.skip-package = true
envs.test-extras.python = "all"
envs.uvx-tools.reqs = [
    # these used solely for specking tools to be used with uvx ...
    "conda-lock>=2.5.5",
    "cruft",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "pre-commit>=4.0.0",
    "pre-commit-uv",
    "prek",
    "pyrefly>=0.37.0",
    "pyright>=1.1.396",
    "basedpyright>=1.31.3",
    "scriv",
    "twine>=5.0.0",
    "ty",
]
envs.uvx-tools.groups = [
    "mypy",
    "nox",
]
envs.uvx-tools.skip-package = true
envs.uvx-tools.style = "requirements"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]
