[build-system]
build-backend = "uv_build"
requires = [
    "uv-build>=0.8.22,<0.9.0",
]

[project]
name = "tmmc-lnpy"
version = "0.8.1.dev0"
description = "Analysis of lnPi results from TMMC simulation"
readme = "README.md"
keywords = [
    "tmmc-lnpy",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "bottleneck",
    "importlib-resources; python_version<'3.10'",
    "joblib",
    "lazy-loader",
    "module-utilities>=0.9.0",
    "numba>=0.58,<0.63; python_version<'3.14' and sys_platform=='darwin' and platform_machine=='x86_64'",
    "numba>=0.58; python_version<'3.14' and sys_platform!='darwin' or platform_machine!='x86_64'",
    "numpy",
    "pandas>=2.3.0",
    "pooch",
    "scikit-image>=0.21",
    "scipy",
    "tqdm",
    "typing-extensions>=4.10.0; python_version<'3.13'",
    "xarray",
]

[project.optional-dependencies]
all = [ "tmmc-lnpy[resample,viz]" ]
resample = [
    "cmomy>=1.0.3",
    "dask[diagnostics]",
    "netcdf4",
]
viz = [
    "ipywidgets",
    "matplotlib",
]

[project.urls]
Documentation = "https://pages.nist.gov/tmmc-lnpy/"
Homepage = "https://github.com/usnistgov/tmmc-lnpy"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    { include-group = "notebook" },
    { include-group = "nox" },
    { include-group = "optional" },
    { include-group = "pytest-accept" },
    { include-group = "test" },
    { include-group = "test-notebook" },
    { include-group = "typecheck" },
]
test = [
    "pytest-cov",
    "pytest-env",
    "pytest-sugar",
    "pytest-xdist",
    { include-group = "pytest" },
]
docs = [
    "autodocsumm",
    "myst-nb",
    "pyenchant",
    "sphinx>=5.3.0",
    # other
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinxcontrib-spelling",
    { include-group = "viz" },
]
# other groups
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
ipython = [ "ipython" ]
mypy = [ "mypy>=1.15.0", "orjson" ]
notebook = [ "ipykernel", "nbclient" ]
nox = [ "nox>=2025.5.1" ]
optional = [ "tmmc-lnpy[all]" ]
pylint = [ "pylint" ]
pytest = [ "pytest!=8.4" ]
pytest-accept = [ "pytest-accept" ]
test-extras = [
    { include-group = "test" },
]
test-notebook = [
    "nbval",
    { include-group = "test" },
    { include-group = "viz" },
]
typecheck = [
    "pandas-stubs",
    "scipy-stubs; python_version>='3.10'",
    "types-tqdm",
    { include-group = "pylint" },
    { include-group = "pytest" },
]
viz = [ "tmmc-lnpy[viz]" ]

# * uv -------------------------------------------------------------------------

[tool.uv]
required-version = ">=0.7.15"
default-groups = [ "dev" ]
fork-strategy = "requires-python"
managed = true
build-backend.module-name = [ "lnPi", "lnpy" ]
build-backend.source-include = [ "tests/**" ]
pip.annotation-style = "line"
pip.generate-hashes = true

[tool.uv.dependency-groups]
dev.requires-python = ">=3.13"
docs.requires-python = ">=3.13"
docs-live.requires-python = ">=3.13"
docs-spelling.requires-python = ">=3.13"
ipython.requires-python = ">=3.13"
mypy.requires-python = ">=3.13"
notebook.requires-python = ">=3.13"
nox.requires-python = ">=3.13"

[tool.nbqa]
# * Checks ---------------------------------------------------------------------

exclude.codespell = "^examples/archived"

[tool.repo-review]
ignore = [
    "GH",     # enable for actions
    "NOX103", # I prefer using "nox.options.sessions"
    "PC140",  # do this externally
    "PC170",  # pygrep
    "PC901",  # ci message
    "RTD",
]

[tool.check-wheel-contents]
src_dir = [
    "src",
]
toplevel = [
    "lnPi",
    "lnpy",
]

[tool.pyproject-fmt]
# max_supported_python = "3.13"
expand_tables = [
    "project.entry-points",
    "project.optional-dependencies",
    "project.scripts",
    "project.urls",
    "tool.mypy.overrides",
    "tool.pyproject2conda",
    "tool.pyright.executionEnvironments",
    "tool.pytest",
    "tool.typos",
    "tool.uv.dependency-groups",
]
indent = 4
keep_full_version = true

[tool.typos.default]
extend-ignore-identifiers-re = [ "NDArray.*" ]

[tool.typos.default.extend-identifiers]
fileprefix_inh = "fileprefix_inh"

[tool.typos.default.extend-words]
STABL = "STABL"
datas = "datas"

# * Testing --------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = [
    "--cov-config=pyproject.toml",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--pyargs",
    "--strict-config",
    "--strict-markers",
    "-ra",
    # xdist
    "-n",
    "4",
]
testpaths = [
    # "README.md",  # py38 issues.
    "lnPi",
    "lnpy",
    "tests",
]
# options
filterwarnings = [
    "error",
    "ignore: FNV hashing is not implemented in Numba:UserWarning",
    "ignore: Module lnpy was never imported:coverage.exceptions.CoverageWarning",
    "ignore: No data was collected:coverage.exceptions.CoverageWarning",
    "ignore: This process:DeprecationWarning",
    "ignore: importing 'Const' from 'astroid':DeprecationWarning",
    "ignore: lnPi is deprecated.  Please transition to using lnpy instead:DeprecationWarning",
]
log_cli_level = "INFO"
minversion = "8"
xfail_strict = true

[tool.coverage]
run.branch = true
paths.source = [
    "src/",
    # needed for testing source if not editable install
    ".nox/**/site-packages/",
]
report.exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]
report.include = [
    "src/*",
]
report.omit = [
    "*/core/typing.py",
    "*/vendored/*",
]
report.show_missing = true

# * typecheck ---------------------------------------------------------------------

[tool.mypy]
exclude = [
    ".eggs",
    ".nox",
    ".numba_cache",
    ".tox",
    ".venv",
    "docs",
]
files = [
    "src",
    "tests",
]
strict = true
# options
check_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
untyped_calls_exclude = [
    "skimage",
]
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "IPython.*",
    "bottleneck.*",
    "joblib.*",
    "lnPi.*",
    "matplotlib.*",
    "numba.*",
    "pooch.*",
    "scipy.ndimage.*",
    "scipy.optimize.*",
    "scipy.sparse.*",
    "scipy.spatial.*",
    "skimage.*",
]

[[tool.mypy.overrides]]
strict = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
module = [
    "lnPi.maskedlnpi_legacy.*",
    "tests.*",
]

[tool.pyright]
exclude = [
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/__pycache__",
    ".nox/**",
    ".tox/**",
    ".venv/**",
]
include = [
    "src",
    "tests",
]
strict = [
    # "src",
    # "tests",
    "noxfile.py",
    "tools/*.py",
    # "src/lnpy/*.py",
    # "src/lnpy/core/*.py",
]
typeCheckingMode = "standard"
# options
# reportMissingSuperCall = true
deprecateTypingAliases = true
enableReachabilityAnalysis = false
enableTypeIgnoreComments = false
reportCallInDefaultInitializer = true
# reportImplicitOverride = true  # TODO(wpk): enable
# reportImportCycles = true  # TODO(wpk): enable
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUnusedCallResult = true
# type-checkers should type-check; linters should lint
reportImplicitStringConcatenation = false
reportPrivateImportUsage = false
reportPrivateUsage = false
reportUnusedImport = false
reportUnusedVariable = false

[[tool.pyright.executionEnvironments]]
root = "tests"
# reportArgumentType = false
# reportCallIssue = false
# reportMissingImports = false
reportUnusedCallResult = false

[tool.pytype]
inputs = [
    "src",
    "tests",
]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user-config = "config/userconfig.toml"
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }
matplotlib = { skip = true, packages = "matplotlib-base" }
lazy-loader = { skip = true, packages = "lazy_loader" }

[tool.pyproject2conda.envs.dev]
groups = [ "dev" ]
python = "default"

[tool.pyproject2conda.envs.test]
groups = [ "test" ]
python = "all"

[tool.pyproject2conda.envs.test-extras]
groups = [ "test-extras" ]
skip-package = true
python = "all"

[tool.pyproject2conda.envs.uvx-tools]
reqs = [
    # these used solely for specking tools to be used with uvx ...
    "basedpyright>=1.31.3",
    "conda-lock>=2.5.5",
    "cruft",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "pre-commit-uv",
    "pre-commit>=4.0.0",
    "prek",
    "pyrefly>=0.37.0",
    "pyright>=1.1.396",
    "scriv",
    "twine>=5.0.0",
    "ty",
]
groups = [
    "mypy",
    "nox",
]
skip-package = true
style = "requirements"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]
